---------------------------------------------------------------------------------------------------
Version: 4.1.18
Date: ????
  Bugfixes:
    - Fixed that the omnifurnace had a wrong working sound set
    - Fixed omnite bricks having the wrong map color
  Changes:
    - Changed burner omnitractor and burner omniphlog crafting time to 5 s (10s / 1s before)
---------------------------------------------------------------------------------------------------
Version: 4.1.17
Date: 2021.07.22
  Bugfixes:
    - Fixed a typo in recipe generation that messed up impure extraction results
---------------------------------------------------------------------------------------------------
Version: 4.1.16
Date: 2021.07.21
  Changes:
    - If a tier only contains a single ore, base and focused extractions of that ore include up to
      2 ores of the previous tier
  Bugfixes:
    - Complete rewrite of the extraction recipe generation logic to fix an issue where ore groups
      of base - and impure extractions were different if there were too many ores in one tier
    - Added a missing check for angels smelting in add_omnicium_alloy()
---------------------------------------------------------------------------------------------------
Version: 4.1.15
Date: 2021.06.20
  Features:
    - Added pollution values for all buildings
---------------------------------------------------------------------------------------------------
Version: 4.1.14
Date: 2021.06.02
  Bugfixes:
    - Updated crafting categories for crushing to match angels update
---------------------------------------------------------------------------------------------------
Version: 4.1.13
Date: 2021.03.29
  Bugfixes:
    - Fixed that setting the levels of fluid extraction too high could cause a crash
    - Fixed various tech tree issues caused by setting the max omnitractor tier to its lowest value
---------------------------------------------------------------------------------------------------
Version: 4.1.12